force-app/main/default/objects/Product2/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-415</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Type</valueSetName>
    </valueSet>
</CustomField>