force-app/main/default/objects/Product2/fields/MSN_LN_Material_Key__c.field-meta.xml
<CustomField>
    <fullName>MSN_LN_Material_Key__c</fullName>
    <description>The unique identifier of the Product/Part in the external Watercare system &quot;LN&quot;</description>
    <externalId>true</externalId>
    <label>LN Material Key</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>