force-app/main/default/objects/Product2/fields/MSN_Part_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_Part_Type__c</fullName>
    <description>Used for grouping of parts of a similar type to allow users to filter the long list quickly on the field service mobile app.</description>
    <label>Part  Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSN_Part_Type</valueSetName>
    </valueSet>
</CustomField>