force-app/main/default/objects/Product2/fields/MSN_SAP_Material_Key__c.field-meta.xml
<CustomField>
    <fullName>MSN_SAP_Material_Key__c</fullName>
    <description>Used to store the legacy unique material key identifier from SAP for a specific part/product.</description>
    <label>SAP Material Key</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>