force-app/main/default/objects/Product2/fields/MSN_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>MSN_Service_Area__c</fullName>
    <description>Describes the Service Area (Water, Wastewater, Reinstatement) a specific product is used for.</description>
    <label>Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSN_Service_Area</valueSetName>
    </valueSet>
</CustomField>